--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -254,7 +254,7 @@
 	}
 
 		form > .field {
-			margin: 0 0 1.5em 0;
+			margin: 0 0 1.5 0;
 		}
 
 			form > .field > :last-child {
@@ -481,7 +481,7 @@
 
 	ul {
 		list-style: disc;
-		margin: 0 0 1.5em 0;
+		margin: 0 0 0.5em 0;
 		padding-left: 1em;
 	}
 
@@ -704,7 +704,7 @@
 		position: relative;
 		max-width: 100%;
 		/*min-width: 27em;*/
-		padding: 4.5em 3em 3em 3em ;
+		padding: 2em 3em 1em 3em ;
 		background: #ffffff;
 		border-radius: 4px;
 		cursor: default;
@@ -832,7 +832,7 @@
 		-ms-perspective: 1000px;
 		perspective: 1000px;
 		position: relative;
-		min-height: 100%;
+		/*min-height: 100%;*/
 		padding: 1em;
 		z-index: 2;
 	}
