--- a/assets/sass/layout/_header.scss
+++ b/assets/sass/layout/_header.scss
@@ -27,16 +27,16 @@
 			position: relative;
 			margin-top: 3.5rem;
 
-			&:before {
-				content: '';
-				display: block;
-				position: absolute;
-				top: calc(-3.5rem - 1px);
-				left: calc(50% - #{_size(border-width) * 1});
-				width: _size(border-width);
-				height: calc(3.5rem + 1px);
-				background: _palette(border);
-			}
+			// &:before {
+			// 	content: '';
+			// 	display: block;
+			// 	position: absolute;
+			// 	top: calc(-3.5rem - 1px);
+			// 	left: calc(50% - #{_size(border-width) * 1});
+			// 	width: _size(border-width);
+			// 	height: calc(3.5rem + 1px);
+			// 	background: _palette(border);
+			// }
 		}
 
 		> :first-child {
@@ -82,6 +82,10 @@
 				> :last-child {
 					margin-bottom: 0;
 				}
+
+				h1 {
+					text-shadow: 0 0 6px #000;
+				}
 			}
 
 			p {
@@ -100,6 +104,8 @@
 				padding-left: 0;
 				border: solid _size(border-width) _palette(border);
 				border-radius: _size(border-radius);
+				background: rgba(#000, 0.3);
+
 
 				li {
 					padding-left: 0;
@@ -117,7 +123,7 @@
 						padding: 0 1.25rem 0 (1.25rem + _font(letter-spacing));
 						text-transform: uppercase;
 						letter-spacing: _font(letter-spacing);
-						font-size: 0.8rem;
+						font-size: 2rem;
 						border-bottom: 0;
 
 						&:hover {
@@ -230,13 +236,13 @@
 
 			nav {
 				ul {
-					@include vendor('flex-direction', 'column');
+					// @include vendor('flex-direction', 'column');
 					min-width: 10rem;
 					max-width: 100%;
 
 					li {
 						border-left: 0;
-						border-top: solid _size(border-width) _palette(border);
+						// border-top: solid _size(border-width) _palette(border);
 
 						&:first-child {
 							border-top: 0;
